query-builder/src/statements/snapshots/surreal_query_builder__statements__for_loop__tests__for_macro_and_block_macro-2.snap
---
source: query-builder/src/statements/for_loop.rs
expression: for_loop.to_raw().build()
---
FOR $__name IN ['Oyelowo', 'Oyedayo'] {
SELECT * FROM person WHERE user_name = $__name;

SELECT * FROM person WHERE user_name = $__name;

FOR $__moniker IN (SELECT VALUE user_name FROM person) {
SELECT * FROM person WHERE user_name = $__moniker;

SELECT * FROM person WHERE user_name = $__name;
};

FOR $__name IN ['Oyelowo', 'Oyedayo'] {
SELECT * FROM person WHERE user_name = $__name;
};
};

FOR $__name IN ['Oyelowo', 'Oyedayo'] {
SELECT * FROM person WHERE user_name = $__name;

SELECT * FROM person WHERE user_name = $__name;
};

FOR $__name IN ['Oyelowo', 'Oyedayo'] {
SELECT * FROM person WHERE user_name = $__name;

SELECT * FROM person WHERE user_name = $__name;
};

IF $__name = 'Oyelowo' THEN
	6
END
