query-builder/src/statements/snapshots/surreal_query_builder__statements__for_loop__tests__for_macro_and_block_macro.snap
---
source: query-builder/src/statements/for_loop.rs
expression: for_loop.fine_tune_params()
---
FOR $__name IN $_param_00000001 {
SELECT * FROM person WHERE user_name = $__name;

SELECT * FROM person WHERE user_name = $__name;

FOR $__moniker IN $_param_00000002 {
SELECT * FROM person WHERE user_name = $__moniker;

SELECT * FROM person WHERE user_name = $__name;
};

FOR $__name IN $_param_00000003 {
SELECT * FROM person WHERE user_name = $__name;
};
};

FOR $__name IN $_param_00000004 {
SELECT * FROM person WHERE user_name = $__name;

SELECT * FROM person WHERE user_name = $__name;
};

FOR $__name IN $_param_00000005 {
SELECT * FROM person WHERE user_name = $__name;

SELECT * FROM person WHERE user_name = $__name;
};

IF $__name = $_param_00000006 THEN
	$_param_00000007
END
