query-builder/src/statements/snapshots/surreal_query_builder__statements__for_loop__tests__for_macro_nested-2.snap
---
source: query-builder/src/statements/for_loop.rs
expression: for_loop.to_raw().build()
---
FOR $__name IN ['Oyelowo', 'Oyedayo'] {
SELECT * FROM person WHERE user_name = $__name;

FOR $__name IN ['Oyelowo', 'Oyedayo'] {
SELECT * FROM person WHERE user_name = $__name;
};
};
