query-builder/src/statements/snapshots/surreal_query_builder__statements__for_loop__tests__for_macro_nested.snap
---
source: query-builder/src/statements/for_loop.rs
expression: for_loop.fine_tune_params()
---
FOR $__name IN $_param_00000001 {
SELECT * FROM person WHERE user_name = $__name;

FOR $__name IN $_param_00000002 {
SELECT * FROM person WHERE user_name = $__name;
};
};
